--- a/ui/buyer/css/bootstrap.css
+++ b/ui/buyer/css/bootstrap.css
@@ -2346,14 +2346,14 @@ table th[class*="col-"] {
 .table > thead > tr.active > th,
 .table > tbody > tr.active > th,
 .table > tfoot > tr.active > th {
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 .table-hover > tbody > tr > td.active:hover,
 .table-hover > tbody > tr > th.active:hover,
 .table-hover > tbody > tr.active:hover > td,
 .table-hover > tbody > tr:hover > .active,
 .table-hover > tbody > tr.active:hover > th {
-  background-color: #e8e8e8;
+  background-color: #5AC58E;
 }
 .table > thead > tr > td.success,
 .table > tbody > tr > td.success,
@@ -2374,7 +2374,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.success:hover > td,
 .table-hover > tbody > tr:hover > .success,
 .table-hover > tbody > tr.success:hover > th {
-  background-color: #d0e9c6;
+  background-color: #5AC58E;
 }
 .table > thead > tr > td.info,
 .table > tbody > tr > td.info,
