--- a/ui/static/css/buyer.css
+++ b/ui/static/css/buyer.css
@@ -1,5 +1,5 @@
 body {
-	background: #DCDDDF url(../img/backgrounds/banner.jpg) no-repeat;
+	background: #DCDDDF;
 	color: #000;
     background-size: cover;
     font: 14px Arial;
@@ -31,7 +31,7 @@ form:after {
 	clear: both;
 	visibility: hidden;
 }
-.container { margin: 25px auto; position: relative; width: 900px; }
+.container {position: relative; width: 900px; }
 #content {
 	background: #f9f9f9;
 	background: -moz-linear-gradient(top,  rgba(248,248,248,1) 0%, rgba(249,249,249,1) 100%);
@@ -51,8 +51,8 @@ form:after {
 	position: relative;
 	text-align: center;
 	text-shadow: 0 1px 0 #fff;
-	width: 500px;
-    height: 350px;
+	width: 550px;
+    height: 400px;
 }
 #content h1 {
 	color: #7E7E7E;
