--- a/ui/static/css/sb-admin.css
+++ b/ui/static/css/sb-admin.css
@@ -51,13 +51,15 @@ body {
 .top-nav>li {
     display: inline-block;
     float: left;
+    margin-left: auto;
+
 }
 
 .top-nav>li>a {
     padding-top: 15px;
     padding-bottom: 15px;
     line-height: 20px;
-    color: #5AC58E;
+    color: #1abc9c;
 }
 
 .top-nav>li>a:hover,
@@ -66,7 +68,7 @@ body {
 .top-nav>.open>a:hover,
 .top-nav>.open>a:focus {
     color: #fff;
-    background-color: #5AC58E;
+    background-color: #1abc9c;
 }
 
 .top-nav>.open>.dropdown-menu {
@@ -122,7 +124,7 @@ ul.alert-dropdown {
         border: none;
         border-radius: 0;
         overflow-y: auto;
-        background-color: #5AC58E;
+        background-color: #1abc9c;
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
