--- a/ui/static/css/styles.css
+++ b/ui/static/css/styles.css
@@ -40,7 +40,7 @@ h6,
 }
 
 #banner {
-   position: relative;
+   position: static;
    width: 100%;
    height: 700px;
 }
@@ -48,6 +48,7 @@ h6,
 .widget-title,
 .widget-title-sm,
 .widget-title-lg {
+    font-size: 25px;
     font-size: 25px;
     font-weight: 400;
     margin-bottom: 15px;
@@ -243,7 +244,7 @@ hr {
 }
 .navbar-main .navbar-nav > li > select {
     color: #5AC58E;
-    padding: 15px;
+    padding: 17px;
     border-color: #fff;
     background-color: white;
 }
@@ -267,12 +268,12 @@ hr {
 }
 
 .navbar-brand {
-    padding: 15px;
+    padding: 14px;
 }
 
 .navbar-brand > img {
-    margin-left: -200px;
-    width: 130px;
+    margin-left: -250px;
+    width: 125px;
 }
 
 .navbar-item-top {
@@ -280,7 +281,7 @@ hr {
 }
 
 .navbar-nav > li > a {
-    font-size: 25px;
+    font-size: 18px;
 }
 
 .navbar-nav > li > a > span {
