--- a/ui/static/css/styles.css
+++ b/ui/static/css/styles.css
@@ -41,8 +41,10 @@ h6,
 
 #banner {
    position: static;
+   background: url(../img/backgrounds/banner.jpg) no-repeat;
+    background-size: 100%;
    width: 100%;
-   height: 700px;
+    height: 1000px;
 }
 
 .widget-title,
